--- a/web/WEB-INF/templates/VM_global_library.vm
+++ b/web/WEB-INF/templates/VM_global_library.vm
@@ -554,7 +554,7 @@ knowledge of the CeCILL-B license and that you accept its terms.
 	<div class="key-value $!css">
     	<h2 class="key">$esc.html($name)</h2>
         <ul class="value">
-          #foreach ( $item in $values )
+          #foreach ( $item in $sorter.sortStrings($values, [$locale, null], $prefixes.expandUri("xl:literalForm")) )
 				#set($source = $display.stripTags($item.getProperty($prefixes.expandUri("dc:source")).value, "a"))
 				#set($label = $item.getProperty($prefixes.expandUri("xl:literalForm")))
 				#if( $label.value != "" )
