--- a/web/WEB-INF/templates/concept.vm
+++ b/web/WEB-INF/templates/concept.vm
@@ -111,11 +111,11 @@ Paramètres:
 			<div class="keys-values">
 				<h1>$prefLabel</h1>
 				
-				#show_labels( $text.property.prefLabel					$it.getConceptLabels("prefLabel")			"prefLabel"		$locale "concept-prefLabel"	)
+				#show_labels_with_source( $text.property.prefLabel		$it.getXlPrefLabels()										$locale "concept-prefLabel"	)
 				#show_property( $text.property.notation					$it.getProperties($prefixes.expandUri("skos:notation"))		$locale "concept-notation"	)
 				#show_property_with_links( $text.property.definition	$it.getProperties($prefixes.expandUri("skos:definition"))	$locale "concept-definition"	)
 				#show_property_with_links( $text.property.scopeNote		$it.getProperties($prefixes.expandUri("skos:scopeNote"))	$locale "concept-scopeNote"	)
-				#show_labels( $text.property.altLabel					$it.getConceptLabels("altLabel")			"altLabel"		$locale "concept-altLabel non-pref"	)
+				#show_labels_with_source( $text.property.altLabel		$it.getXlAltLabels()										$locale "concept-altLabel non-pref"	)
 				#linked_entries( $text.property.broader					$it.getBroaderConcepts()									$locale	"concept-broader" )
 				#linked_entries_by_collection( $text.property.narrower	$it.getNarrowerConceptsByCollection()						$locale "concept-narrower" )
 				#linked_entries_by_collection( $text.property.related	$it.getRelatedConceptsByCollection()						$locale "concept-related" )
