--- a/web/WEB-INF/templates/conceptScheme.vm
+++ b/web/WEB-INF/templates/conceptScheme.vm
@@ -87,7 +87,7 @@ Paramètres:
 			#if( !$collection.isStringEmpty($topConcepts) )
 			    <h2 class="clear">$esc.html($text.property.topConcept)</h2>
 			    <ul id="topConceptList">
-					#foreach ($item in $sorter.sortEntriesByLabel($topConcepts, [$locale, null], false))
+					#foreach ($item in $sorter.sortEntriesByLabel($topConcepts, [$locale, null], true))
 						<li>
 					    	<a href="$resolver.toUrl($item.Uri)">$esc.html($item.getLabel($locale).value.toLowerCase())</a>
 						</li>
@@ -100,7 +100,7 @@ Paramètres:
 		   <h2 class="clear">$esc.html($text.property.conceptGroups)</h2>
 		    <ul id="conceptGroupList">
 				#set( $conceptGroups = $it.getConceptGroups($locale) )
-				#foreach ($item in $sorter.sortEntriesByLabel($conceptGroups, [$locale, null], false))
+				#foreach ($item in $sorter.sortEntriesByLabel($conceptGroups, [$locale, null], true))
 					<li>
 						#set($filteredConceptGroupUrl = "$esc.url(${item.getLabel($locale).value})?sourceVocabulary=$resolver.getUri($it.uri)")
 						<a href="$resolver.toUrl("../page/conceptGroup" , $filteredConceptGroupUrl)">
