--- a/web/WEB-INF/templates/schemes-list-producer.vm
+++ b/web/WEB-INF/templates/schemes-list-producer.vm
@@ -56,7 +56,9 @@ Paramètres :
 	    <p>Les différents thésaurus produits par <em>$producer</em> sont :</p>
 	    <ul>
 		#foreach ($item in $sorter.sortEntriesByLabel($it, [$locale, null], false))
-	    	<li><a href="$resolver.toUrl($item.uri)">$esc.html($item.getLabel($locale).value)</a></li>
+			#if( $item.getLabel($locale).value != "" )
+	    		<li><a href="$resolver.toUrl($item.uri)">$esc.html($item.getLabel($locale).value)</a></li>
+	    	#end
 		#end
 	    </ul>
 	      
