Correction de l'ordre de tri dans les listes des liens

--- a/web/WEB-INF/templates/VM_global_library.vm
+++ b/web/WEB-INF/templates/VM_global_library.vm
@@ -350,7 +350,7 @@ knowledge of the CeCILL-B license and that you accept its terms.
       <div class="key-value $!css">
         <h2 class="key">$esc.html($name)</h2>
         <ul class="value">
-#foreach( $item in $sorter.sortEntriesByLabel($l, [$locale, null], false) )
+#foreach( $item in $sorter.sortEntriesByLabel($l, [$locale, null], true) )
 		#if( $item.getLabel($locale).value != "" )
           <li>
              <a href="$resolver.toUrl($item.Uri)">$esc.html($item.getLabel($locale).value.toLowerCase())</a>
@@ -408,12 +408,12 @@ knowledge of the CeCILL-B license and that you accept its terms.
       <div class="key-value $!css">
         <h2 class="key">$esc.html($name)</h2>
         <div class="value">
-	#foreach( $collection in $sorter.sortEntriesByLabel($m.keySet(), [$locale, null], false) )
+	#foreach( $collection in $sorter.sortEntriesByLabel($m.keySet(), [$locale, null], true) )
 		#if( $collection )
 			<h3 class="concept-collection">&lt;&nbsp;$esc.html($collection.getLabel($locale).value)&nbsp;&gt;</h3>
 		#end
 			<ul>
-		#foreach( $item in $sorter.sortEntriesByLabel($m.get($collection), [$locale, null], false) )
+		#foreach( $item in $sorter.sortEntriesByLabel($m.get($collection), [$locale, null], true) )
 				<li>
 					<a href="$resolver.toUrl($item.Uri)">$esc.html($item.getLabel($locale).value.toLowerCase())</a>
 				</li>
