--- a/web/WEB-INF/templates/conceptGroup.vm
+++ b/web/WEB-INF/templates/conceptGroup.vm
@@ -95,7 +95,7 @@ Paramètres:
 				<p>Liste des concepts issus du vocabulaire <strong>$!it.getVocabularyLabel($locale).value</strong></p>
 				<ul>
 					## A_suppr : sert à rien : #set($currentConceptLabel = $it.getAllConceptMembers().iterator.next().getConceptScheme())
-					#foreach ($item in $sorter.sortEntriesByLabel($it.getAllConceptMembers(), [$locale, null], false))
+					#foreach ($item in $sorter.sortEntriesByLabel($it.getAllConceptMembers(), [$locale, null], true))
 					<li>
 						<a href="$resolver.toUrl($item.uri)">$esc.html($item.getLabel($locale).value)</a>
 						#if (!$it.isSetSourceVocabulary())
@@ -109,7 +109,7 @@ Paramètres:
 				<ul>
 					#set($currentConceptLabel = $it.getAllConceptMembers().iterator.next().getLabel($locale).value)
 					#set ($firstLoop = true)
-					#foreach ($item in $sorter.sortEntriesByLabel($it.getAllConceptMembers(), [$locale, null], false))
+					#foreach ($item in $sorter.sortEntriesByLabel($it.getAllConceptMembers(), [$locale, null], true))
 						#if ($currentConceptLabel.equals($item.getLabel($locale).value))
 							<li>Dans <a href="$resolver.toUrl($item.uri)">$esc.html($item.getConceptScheme().getLabel($locale).value)</a></li>
 							#set ($currentConceptLabel = $item.getLabel($locale).value)
